z-index fix for menu

--- a/css/structure.css
+++ b/css/structure.css
@@ -570,6 +570,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
   top:0;
   left:0;
   background-color:#000;
+  z-index:1001;
 }
 .story #story-header #story-back{
   position:absolute;
@@ -619,6 +620,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
   padding:10px 25px;
   text-align:left;
   transition:top 400ms cubic-bezier(0.81, 0.11, 0.11, 0.91);
+  z-index:1000;
 }
 .story #story-menu.selected{
   top:50px;
